# OAK-D-Windows-Streaming

./: .gitignore  CLAUDE.md  Camera-List  compass_artifact_wf-ded0aeb2-1c12-4063-b8f7-843dc21db55b_text_markdown.md  pyproject.toml  run.py  start.bat
.claude/: settings.json
.claude/agents/: cam-integration.md  integration-test.md  monitoring.md  mqtt-infra.md  pi-controller.md
backend/: angle_targets.py  bandwidth.py  bandwidth_profiles.json  bandwidth_test.py  calibration.py  camera_manager.py  config.py  kreuzstoss.py  kreuzstoss_store.py  main.py  models.py  recording.py  session_store.py
backend/mqtt/: __init__.py  alerts.py  client.py  config.py  history.py  imu_publisher.py  models.py  monitor.py  orchestrator.py  service.py  topics.py
config/: angle_targets.json  calibration.json  kreuzstoss.json  last_session.json  monitoring.yaml  mqtt.yaml
config/email_templates/: alert.txt.j2
config/sequences/: example_grid_scan.yaml
docs/: KREUZSTOSS_HEADLESS.md  PRD-MQTT.md  RASPBERRY_PI_IMPLEMENTATION.md
documentation/: API_REFERENCE.md  ARCHITECTURE.md  KNOWN_ISSUES.md  PROJECT_STATE.md  bandwidth_test_results.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AngleTargetsPanel.tsx  BandwidthInfo.tsx  CameraCard.tsx  CameraGrid.tsx  ControlPanel.tsx  DetectionOverlay.tsx  ImuOverlay.tsx  KreuzstossButton.tsx  KreuzstossPanel.tsx
frontend/src/contexts/: KreuzstossContext.tsx
frontend/src/hooks/: useCamera.ts
frontend/src/types/: index.ts
